--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
-theme: jekyll-theme-slate
+title: Researcher
+url: "http://ankitsultana.com"
+baseurl: "/researcher"
+
+markdown: kramdown
+
+tracking_id: #
+
+sass:
+    style: compressed
+    sass_dir: _sass
