--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,8 +3,12 @@
 - name: "ＰＤＦ檔下載"
   link: "resume.pdf"
   
+- name: "技能點"
+  link: "skill"
+
+- name: "關於我"
+  link: "about"
+  
 - name: "簡介"
   link: "contact"
   
-- name: "關於我"
-  link: "about"
